[package]
name = "mdbook-pandoc"
description = "A mdbook backend that outsources most of the rendering process to pandoc."
version = "0.7.3"
rust-version = "1.74.0"
edition = "2021"
authors = ["Max Heller <max.a.heller@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "pandoc", "pdf", "latex", "book"]
documentation = "https://docs.rs/mdbook-pandoc"
repository = "https://github.com/max-heller/mdbook-pandoc"
include = ["/src", "/CHANGELOG.md", "/LICENSE-*", "/README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.0"
anyhow = "1.0.47"
cssparser = "0.34.0"
env_logger = "0.11.0"
genawaiter = { version = "0.99.1", default-features = false }
html5gum = "0.5.7"
log = "0.4.0"
mdbook = { version = "0.4.35", default-features = false }
normpath = "1.0.0"
once_cell = "1.0.0"
pulldown-cmark = { version = "0.10.0", default-features = false }
pulldown-cmark-to-cmark = "14.0.1"
regex = "1.5.5"
semver = "1.0.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_derive = "1.0.85"
serde_yaml = "0.9.0"
tempfile = "3.0.0"
toml = "0.8.0"
ureq = "2.0.0"
walkdir = "2.0.0"

# Increase minimum version requirements of transitive dependencies
thiserror = "1.0.2"
proc-macro2 = "1.0.60"

[dev-dependencies]
insta = { version = "1.36.0" }
similar = { version = "2.5.0", features = ["text"] }
tracing = { version = "0.1.0", default-features = false, features = ["std"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["fmt", "tracing-log"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace]
exclude = ["books/rust-reference/mdbook-spec"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
pandoc = { stage = ["run"] }
librsvg2-bin = { stage = ["run"] } # SVG support

[workspace.metadata.dist.dependencies.chocolatey]
pandoc = { stage = ["run"] }
rsvg-convert = { stage = ["run"] } # SVG support

[workspace.metadata.dist.dependencies.homebrew]
pandoc = { stage = ["run"] }
librsvg = { stage = ["run"] } # SVG support

[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-latest"

# Render sample books and upload to release as extra artifacts
[[workspace.metadata.dist.extra-artifacts]]
artifacts = [
  "rendered-cargo-book.pdf",
  "rendered-mdBook-guide.pdf",
  "rendered-nomicon.pdf",
  "rendered-rust-book.pdf",
  "rendered-rust-by-example.pdf",
  "rendered-rust-edition-guide.pdf",
  "rendered-rust-embedded.pdf",
  "rendered-rust-reference.pdf",
  "rendered-rustc-dev-guide.pdf",
]
build = ["bash", "-c", "source scripts/install-ci-deps && ./scripts/cargo-dist-render-books"]
