[package]
name = "mdbook-pandoc"
description = "A pandoc-powered mdbook backend"
version = "0.11.0"
rust-version = "1.88.0"
edition = "2021"
authors = ["Max Heller <max.a.heller@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "pandoc", "pdf", "latex", "book"]
documentation = "https://docs.rs/mdbook-pandoc"
repository = "https://github.com/max-heller/mdbook-pandoc"
include = ["/src", "!/src/tests", "/CHANGELOG.md", "/LICENSE-*", "/README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.0"
anyhow = "1.0.47"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
cssparser = "0.36.0"
font-awesome-as-a-crate = "0.3.0"
html5ever = "0.36.0"
indexmap = { version = "2.7.0", features = ["serde"] }
mdbook-renderer = { version = "0.5.2", default-features = false }
normpath = "1.0.0"
once_cell = "1.0.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
regex = "1.5.5"
ego-tree = "0.10.0"
replace_with = "0.1.7"
semver = "1.0.0"
serde = { version = "1.0.85", features = ["derive"] }
serde_yaml = "0.9.0"
tempfile = "3.0.0"
toml = { version = "0.9.0", default-features = false, features = ["serde"] }
utf8parse = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["ansi", "env-filter", "fmt"] }
walkdir = "2.0.0"
percent-encoding = "2.3.2"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.36.0" }
mdbook-driver = { version = "0.5.2", default-features = false }
similar = { version = "2.5.0", features = ["text"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[workspace]
exclude = ["books/rust-reference/mdbook-spec"]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
